--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
-cmake_minimum_required(VERSION 3.11.3)
+cmake_minimum_required(VERSION 2.8)
 
 # set(CMAKE_CXX_STANDARD 17)
 project(OSM_A_star_search)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -pthread")
 
+set (OpenCV_DIR /home/arda/Documents/opencv/build)
 find_package(OpenCV 4.1 REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
